--- a/Prisma/Prisma/App.xaml
+++ b/Prisma/Prisma/App.xaml
@@ -1,9 +1,9 @@
-﻿<Application x:Class="Prisma.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Prisma"
-             StartupUri="MainWindow.xaml">
-    <Application.Resources>
-         
-    </Application.Resources>
-</Application>
+﻿<prism:PrismApplication
+    x:Class="Prisma.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:Prisma"
+    xmlns:prism="http://prismlibrary.com/">
+  <Application.Resources>
+  </Application.Resources>
+</prism:PrismApplication>
