--- a/Prisma/Prisma/Views/Shell.xaml
+++ b/Prisma/Prisma/Views/Shell.xaml
@@ -1,19 +1,34 @@
-﻿<Window x:Class="Prisma.Shell"
+﻿<Window x:Class="Prisma.Views.Shell"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Prisma"
+        xmlns:local="clr-namespace:Prisma.Views"
         mc:Ignorable="d"
         Title="Prisma application" Height="450" Width="800"
         WindowState="Maximized">
-    <Grid>
+  <DockPanel>
     <TextBlock 
+      DockPanel.Dock="Top"
       Text="Welcome to prisma" 
       VerticalAlignment="Center" 
       HorizontalAlignment="Center" 
       FontSize="80" 
       FontWeight="Bold"
       Foreground="Coral"/>
-  </Grid>
+    <Grid>
+      <Grid.RowDefinitions>
+        <RowDefinition Height="*" />
+        <RowDefinition Height="Auto" />
+      </Grid.RowDefinitions>
+
+      <ListView
+        ItemsSource="{Binding Customers}"
+        SelectedItem="{Binding SelectedCustomer}" />
+      <Button
+        Grid.Row="1" Width="80" Height="40"
+        Command="{Binding CommandLoad}"
+        Content="LOAD" />
+    </Grid>
+  </DockPanel>
 </Window>
