--- a/Prisma/Prisma/Views/Shell.xaml
+++ b/Prisma/Prisma/Views/Shell.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Prisma.Views"
+        xmlns:prism="http://prismlibrary.com/"
         mc:Ignorable="d"
         Title="Prisma application" Height="450" Width="800"
         WindowState="Maximized">
@@ -22,13 +23,16 @@
         <RowDefinition Height="Auto" />
       </Grid.RowDefinitions>
 
+      <ContentControl prism:RegionManager.RegionName="MainRegion" />
+
+      <!--
       <ListView
         ItemsSource="{Binding Customers}"
         SelectedItem="{Binding SelectedCustomer}" />
       <Button
         Grid.Row="1" Width="80" Height="40"
         Command="{Binding CommandLoad}"
-        Content="LOAD" />
+        Content="LOAD" />-->
     </Grid>
   </DockPanel>
 </Window>
