Loading main modules in tab view

--- a/Prisma/Prisma/Views/Shell.xaml
+++ b/Prisma/Prisma/Views/Shell.xaml
@@ -23,16 +23,13 @@
         <RowDefinition Height="Auto" />
       </Grid.RowDefinitions>
 
-      <ContentControl prism:RegionManager.RegionName="MainRegion" />
-
-      <!--
-      <ListView
-        ItemsSource="{Binding Customers}"
-        SelectedItem="{Binding SelectedCustomer}" />
-      <Button
-        Grid.Row="1" Width="80" Height="40"
-        Command="{Binding CommandLoad}"
-        Content="LOAD" />-->
+      <TabControl prism:RegionManager.RegionName="MainRegion">
+        <TabControl.Resources>
+          <Style TargetType="TabItem">
+            <Setter Property="Header" Value="{Binding DataContext.Title}" />
+          </Style>
+        </TabControl.Resources>
+      </TabControl>
     </Grid>
   </DockPanel>
 </Window>
