--- a/Prisma/Prisma.Studio/Views/MainView.xaml
+++ b/Prisma/Prisma.Studio/Views/MainView.xaml
@@ -1,16 +1,15 @@
-﻿<UserControl x:Class="Prisma.Warehouse.Views.MainView"
+﻿<UserControl x:Class="Prisma.Studio.Views.MainView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Prisma.Warehouse.Views"
+             xmlns:local="clr-namespace:Prisma.Studio.Views"
              xmlns:prism="http://prismlibrary.com/"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              prism:ViewModelLocator.AutoWireViewModel="True">
-    <Grid>
-    <TextBlock Text="Warehouse" HorizontalAlignment="Center" VerticalAlignment="Center"
-                 Foreground="Purple" FontSize="48" FontStyle="Italic"/>
-
+  <Grid>
+    <TextBlock Text="Studio" HorizontalAlignment="Center" VerticalAlignment="Center"
+               Foreground="Cyan" FontSize="48" FontStyle="Italic"/>
   </Grid>
 </UserControl>
