--- a/Prisma/Prisma.Warehouse/Views/RibbonTabView.xaml
+++ b/Prisma/Prisma.Warehouse/Views/RibbonTabView.xaml
@@ -4,9 +4,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Prisma.Warehouse.Views"
+             xmlns:prism="http://prismlibrary.com/"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
-             Header="Warehouse">
+             Header="{Binding Title}"
+             prism:ViewModelLocator.AutoWireViewModel="True"
+             IsSelected="{Binding IsSelected}">
   <RibbonGroup Header="Browse">
     <RibbonButton Label="Attach" />
     <RibbonButton Label="Unattach" />
