--- a/Prisma/Prisma/Views/Shell.xaml
+++ b/Prisma/Prisma/Views/Shell.xaml
@@ -15,20 +15,6 @@
         </RibbonApplicationMenu>
       </Ribbon.ApplicationMenu>
     </Ribbon>
-    <Grid DockPanel.Dock="Bottom">
-      <Grid.RowDefinitions>
-        <RowDefinition Height="*" />
-        <RowDefinition Height="Auto" />
-      </Grid.RowDefinitions>
-
-      <!--
-      <TabControl prism:RegionManager.RegionName="MainRegion">
-        <TabControl.Resources>
-          <Style TargetType="TabItem">
-            <Setter Property="Header" Value="{Binding DataContext.Title}" />
-          </Style>
-        </TabControl.Resources>
-      </TabControl>-->
-    </Grid>
+    <ContentControl DockPanel.Dock="Bottom" prism:RegionManager.RegionName="WorkspaceRegion" />
   </DockPanel>
 </Window>
