--- a/Prisma/Prisma.Warehouse/Views/RibbonTabView.xaml
+++ b/Prisma/Prisma.Warehouse/Views/RibbonTabView.xaml
@@ -8,8 +8,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              Header="{Binding Title}"
-             prism:ViewModelLocator.AutoWireViewModel="True"
-             IsSelected="{Binding IsSelected}">
+             prism:ViewModelLocator.AutoWireViewModel="True">
   <RibbonGroup Header="Browse">
     <RibbonButton Label="Attach" />
     <RibbonButton Label="Unattach" />
