--- a/Prisma/Prisma.Warehouse/Views/BrowserView.xaml
+++ b/Prisma/Prisma.Warehouse/Views/BrowserView.xaml
@@ -9,14 +9,10 @@
              d:DesignHeight="450" d:DesignWidth="800"
              prism:ViewModelLocator.AutoWireViewModel="True">
   <DockPanel>
-    <StackPanel Orientation="Horizontal" DockPanel.Dock="Top">
-      <Button Content="Attach" Command="{Binding AttachCommand}" Margin="5" Width="100" Height="25" />
-      <Button Content="Detach" Command="{Binding DetachCommand}" Margin="5" Width="100" Height="25" />
-    </StackPanel>
     <ListView DockPanel.Dock="Bottom" ItemsSource="{Binding BrowsableObjects}" SelectedItem="{Binding SelectedBrowsableObject}">
       <ListView.ItemTemplate>
         <DataTemplate>
-          <StackPanel ToolTip="{Binding FilePath}">
+          <StackPanel ToolTip="{Binding FilePath}" Margin="5">
             <Image 
               Source="/Prisma.Infrastructure;Component/Resources/pgnfile.gif"
               Width="50" Height="50" Stretch="Uniform"
